--- a/1.2.3-Vuex的使用与常用操作/index.html
+++ b/1.2.3-Vuex的使用与常用操作/index.html
@@ -39,7 +39,7 @@
             }
         },
         mounted: function () {
-            console.log(this)
+            console.log('this:',this)
         }
     })
     
@@ -50,7 +50,8 @@
         },
         store: myStore,
         mounted: function () {
-            console.log(this)
+            console.log('this:',this)
+
         }
     })
 </script>
